# galaxyMaster

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt
src/: CMakeLists.txt  deviceConfig.h  display.c  display.h  galaxyConfig.h  init.c  init.h  master.c  pattern.c  pattern.h  patternSupport.c  patternSupport.h  version.h.in
